mudando texto de dinâmicas para mentorias

--- a/professores/templates/professores/dinamicas_index.html
+++ b/professores/templates/professores/dinamicas_index.html
@@ -115,13 +115,13 @@
 
 {% block content %}
 
-  <span class="titulo">Dinâmicas</span>
+  <span class="titulo">Mentorias</span>
 
   <div class="wrap">
       <div class="one">
         <br><br>
-        <a href="{% url 'dinamicas_criar'%}"><h5>Agendar Dinâmica</h5></a>
-        <a href="{% url 'dinamicas_lista'%}"><h5>Listar Dinâmicas</h5></a>
+        <a href="{% url 'dinamicas_criar'%}"><h5>Agendar Mentoria</h5></a>
+        <a href="{% url 'dinamicas_lista'%}"><h5>Listar Mentorias</h5></a>
       </div>
       <div class="two" id='calendar'></div>
   </div>
