--- a/professores/templates/professores/index_professor.html
+++ b/professores/templates/professores/index_professor.html
@@ -15,7 +15,7 @@
     <h5>Agendamentos</h5>
     <ul>
         <li><a href="{% url 'bancas_index' %}">Bancas</a></li>
-        <li><a href="{% url 'dinamicas_index' %}">Dinâmicas</a></li>
+        <li><a href="{% url 'dinamicas_index' %}">Mentorias</a></li>
     </ul>
 
     <h5>Áreas de Interesse</h5>
